--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -58,6 +58,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnalyticsDataManager.cs" />
     <Compile Include="StatementSearchManager.cs" />
     <Compile Include="TenantConfigurationManager.cs" />
     <Compile Include="AssetSettingManager.cs" />
