--- a/Repository/packages.config
+++ b/Repository/packages.config
@@ -3,6 +3,7 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
+  <package id="System.Drawing.Common" version="4.7.0" targetFramework="net461" />
   <package id="System.Linq.Dynamic" version="1.0.7" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
