--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -77,6 +77,7 @@
     <Compile Include="IncomeSources.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="PageWidget.cs" />
+    <Compile Include="PageWidgetVistorData.cs" />
     <Compile Include="ProductType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReminderAndRecommendation.cs" />
@@ -113,6 +114,7 @@
     <Compile Include="UserLogin.cs" />
     <Compile Include="UserLoginActivityHistory.cs" />
     <Compile Include="Widget.cs" />
+    <Compile Include="WidgetVisitorPieChartData.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
