--- a/API/Web.config
+++ b/API/Web.config
@@ -56,7 +56,7 @@
 
     <!--NodeJS-->
     <add key="NodeJSAPIURL" value="http://192.168.100.7:3000/CreateDynamicVideo" />
-    <add key="ThreadCountStaticScene" value="1" />
+    <add key="ThreadCountToGenerateStatementParallel" value="10" />
     <add key="ThreadCountDynamicScene" value="1" />
     <add key="ThreadInterval" value="15" />
   </appSettings>
