--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -251,6 +251,21 @@
     <Compile Include="VideoRecord.cs">
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
+    <Compile Include="View_PageRecord.cs">
+      <DependentUpon>NISDataContext.tt</DependentUpon>
+    </Compile>
+    <Compile Include="View_ScheduleRecord.cs">
+      <DependentUpon>NISDataContext.tt</DependentUpon>
+    </Compile>
+    <Compile Include="View_SourceDataRecord.cs">
+      <DependentUpon>NISDataContext.tt</DependentUpon>
+    </Compile>
+    <Compile Include="View_StatementDefinitionRecord.cs">
+      <DependentUpon>NISDataContext.tt</DependentUpon>
+    </Compile>
+    <Compile Include="View_UserRecord.cs">
+      <DependentUpon>NISDataContext.tt</DependentUpon>
+    </Compile>
     <Compile Include="WidgetRecord.cs">
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
