--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -126,6 +126,7 @@
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
     <Compile Include="IRepository\IAnalyticsDataRepository.cs" />
+    <Compile Include="IRepository\ICountryRepository.cs" />
     <Compile Include="IRepository\IStatementSearchRepository.cs" />
     <Compile Include="IRepository\ITenantConfigurationRepository.cs" />
     <Compile Include="IRepository\IAssetSettingRepository.cs" />
@@ -194,6 +195,7 @@
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
     <Compile Include="SQLRepository\SQLAnalyticsDataRepository.cs" />
+    <Compile Include="SQLRepository\SQLCountryRepository.cs" />
     <Compile Include="SQLRepository\SQLStatementSearchRepository.cs" />
     <Compile Include="SQLRepository\SQLTenantConfigurationRepository.cs" />
     <Compile Include="SQLRepository\SQLAssetSettingRepository.cs" />
