--- a/App/ClientApp/package.json
+++ b/App/ClientApp/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@kolkov/angular-editor": "^1.1.3",
     "@ng-bootstrap/ng-bootstrap": "^4.2.2",
     "@tomblue/ng2-bootstrap-modal": "^1.1.2",
     "angular-font-awesome": "^3.1.2",
