--- a/Exception/Exception.csproj
+++ b/Exception/Exception.csproj
@@ -54,12 +54,23 @@
     <Compile Include="Asset\InvalidAssetException.cs" />
     <Compile Include="Asset\InvalidAssetPathException.cs" />
     <Compile Include="Asset\InvalidAssetSearchParameter.cs" />
+    <Compile Include="City\CityNotFoundException.cs" />
+    <Compile Include="City\DuplicateCityFoundException.cs" />
+    <Compile Include="City\InvalidCityException.cs" />
+    <Compile Include="Client\ClientNotFoundException.cs" />
+    <Compile Include="Client\ClientSubscriptionHistoryUpdatationFailedException.cs" />
+    <Compile Include="Client\DuplicateClientException.cs" />
+    <Compile Include="Client\InvalidClientException.cs" />
+    <Compile Include="Client\InvalidClientSearchParameter.cs" />
     <Compile Include="ConnectionStringNotFoundException.cs" />
     <Compile Include="Constants\AssetLibrary.cs" />
+    <Compile Include="Constants\CityConstant.cs" />
+    <Compile Include="Constants\ClientConstant.cs" />
     <Compile Include="Constants\CountryConstant.cs" />
     <Compile Include="Constants\ExceptionConstant.cs" />
     <Compile Include="Constants\RenderEngineConstant.cs" />
     <Compile Include="Constants\ScheduleLogConstant.cs" />
+    <Compile Include="Constants\StateConstant.cs" />
     <Compile Include="Constants\StatementConstant.cs" />
     <Compile Include="Constants\PageConstant.cs" />
     <Compile Include="Constants\ScheduleConstant.cs" />
@@ -96,6 +107,9 @@
     <Compile Include="Role\DuplicateRoleFoundException.cs" />
     <Compile Include="Role\InvalidRoleException.cs" />
     <Compile Include="Role\RoleNotFoundException.cs" />
+    <Compile Include="State\DuplicateStateFoundException.cs" />
+    <Compile Include="State\InvalidStateException.cs" />
+    <Compile Include="State\StateNotFoundException.cs" />
     <Compile Include="TenantNotFoundException.cs" />
     <Compile Include="User\AlreadyUsedPasswordException.cs" />
     <Compile Include="User\DeactivatedUserLoginException.cs" />
