--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -42,6 +42,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Websym.Core.EntityManager.Model, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\References\Entity Manager\Websym.Core.EntityManager.Model.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountInformation.cs" />
@@ -54,20 +58,29 @@
     <Compile Include="AssetLibrary.cs" />
     <Compile Include="AssetPathSetting.cs" />
     <Compile Include="AssetSetting.cs" />
+    <Compile Include="City.cs" />
+    <Compile Include="Client.cs" />
     <Compile Include="Common\AssetLibraryConstant.cs" />
     <Compile Include="Common\BaseEntity.cs" />
     <Compile Include="Common\BaseSearchEntity.cs" />
+    <Compile Include="Common\CityConstant.cs" />
+    <Compile Include="Common\ClientConstants.cs" />
     <Compile Include="Common\CountryConstant.cs" />
     <Compile Include="Common\HtmlConstants.cs" />
     <Compile Include="Common\ModelConstant.cs" />
+    <Compile Include="Common\ModelUtility.cs" />
     <Compile Include="Common\PagingParameter.cs" />
     <Compile Include="Common\RenderEngineConstant.cs" />
+    <Compile Include="Common\StateConstant.cs" />
+    <Compile Include="Contact.cs" />
+    <Compile Include="ContactType.cs" />
     <Compile Include="Country.cs" />
     <Compile Include="CustomerInformation.cs" />
     <Compile Include="DashboardData.cs" />
     <Compile Include="Enum\Activity.cs" />
     <Compile Include="Enum\BatchStatus.cs" />
     <Compile Include="Enum\ClaimType.cs" />
+    <Compile Include="Enum\ClientType.cs" />
     <Compile Include="Enum\ScheduleLogStatus.cs" />
     <Compile Include="Enum\ScheduleStatus.cs" />
     <Compile Include="Enum\StatemnetStatus.cs" />
@@ -96,6 +109,8 @@
     <Compile Include="Search Parameter\AssetLibrarySearchParameter.cs" />
     <Compile Include="Search Parameter\AnalyticsSearchParameter.cs" />
     <Compile Include="Search Parameter\AssetSearchParameter.cs" />
+    <Compile Include="Search Parameter\CitySearchParameter.cs" />
+    <Compile Include="Search Parameter\ClientSearchParameter.cs" />
     <Compile Include="Search Parameter\CountrySearchParameter.cs" />
     <Compile Include="Search Parameter\RenderEngineSearchParameter.cs" />
     <Compile Include="Search Parameter\ScheduleLogSearchParameter.cs" />
@@ -103,9 +118,11 @@
     <Compile Include="Search Parameter\StatementSearchParameter.cs" />
     <Compile Include="Search Parameter\PageSearchParameter.cs" />
     <Compile Include="Search Parameter\SchdeuleSearchParameter.cs" />
+    <Compile Include="Search Parameter\StateSearchParameter.cs" />
     <Compile Include="Search Parameter\WidgetSearchParameter.cs" />
     <Compile Include="Search Parameter\RoleSearchParameter.cs" />
     <Compile Include="Search Parameter\UserSearchParameter.cs" />
+    <Compile Include="State.cs" />
     <Compile Include="StatementPreviewData.cs" />
     <Compile Include="StatementSearch.cs" />
     <Compile Include="Statement.cs" />
