--- a/Repository/Repository.csproj
+++ b/Repository/Repository.csproj
@@ -126,8 +126,10 @@
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
     <Compile Include="IRepository\IAnalyticsDataRepository.cs" />
+    <Compile Include="IRepository\ICityRepository.cs" />
     <Compile Include="IRepository\ICountryRepository.cs" />
     <Compile Include="IRepository\IStatementSearchRepository.cs" />
+    <Compile Include="IRepository\IStateRepository.cs" />
     <Compile Include="IRepository\ITenantConfigurationRepository.cs" />
     <Compile Include="IRepository\IAssetSettingRepository.cs" />
     <Compile Include="IRepository\IAssetLibraryRepository.cs" />
@@ -195,6 +197,8 @@
       <DependentUpon>NISDataContext.tt</DependentUpon>
     </Compile>
     <Compile Include="SQLRepository\SQLAnalyticsDataRepository.cs" />
+    <Compile Include="SQLRepository\SQLAzureCityRepository.cs" />
+    <Compile Include="SQLRepository\SQLAzureStateRepository.cs" />
     <Compile Include="SQLRepository\SQLCountryRepository.cs" />
     <Compile Include="SQLRepository\SQLStatementSearchRepository.cs" />
     <Compile Include="SQLRepository\SQLTenantConfigurationRepository.cs" />
