--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -78,6 +78,7 @@
     <Compile Include="PageManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScheduleManager.cs" />
+    <Compile Include="TenantContactManager.cs" />
     <Compile Include="WidgetManager.cs" />
     <Compile Include="RoleManager.cs" />
     <Compile Include="UserManager.cs" />
