Contact Type API

--- a/API/API.csproj
+++ b/API/API.csproj
@@ -281,6 +281,7 @@
     <Compile Include="Container\UnityResolverService.cs" />
     <Compile Include="Controllers\AnalyticsDataController.cs" />
     <Compile Include="Controllers\ClientController.cs" />
+    <Compile Include="Controllers\ContactTypeController.cs" />
     <Compile Include="Controllers\CountryController.cs" />
     <Compile Include="Controllers\StatementSearchController.cs" />
     <Compile Include="Controllers\TenantConfigurationController.cs" />
