--- a/App/App.csproj
+++ b/App/App.csproj
@@ -32,6 +32,7 @@
     <None Remove="ClientApp\src\app\layout\asset-libraries\asset-library.service.ts" />
     <None Remove="ClientApp\src\app\layout\asset-libraries\asset-library.ts" />
     <None Remove="ClientApp\src\app\layout\asset-settings\asset-setting.ts" />
+    <None Remove="ClientApp\src\app\layout\contacttype\contacttype.ts" />
     <None Remove="ClientApp\src\app\layout\country\country.ts" />
     <None Remove="ClientApp\src\app\layout\logs-details\log-details.ts" />
     <None Remove="ClientApp\src\app\layout\logs\scheduleLog.ts" />
@@ -42,6 +43,7 @@
     <None Remove="ClientApp\src\app\layout\statement-search\statementSearch.ts" />
     <None Remove="ClientApp\src\app\layout\tenant-configuration\tenantConfiguration.service.ts" />
     <None Remove="ClientApp\src\app\layout\tenant-configuration\tenatConfiguration.ts" />
+    <None Remove="ClientApp\src\app\layout\tenants\tenant.ts" />
     <None Remove="ClientApp\src\app\layout\users\user.ts" />
     <None Remove="ClientApp\src\app\layout\widgets\widget.service.ts" />
     <None Remove="ClientApp\src\app\layout\widgets\Widget.ts" />
@@ -57,6 +59,7 @@
     <TypeScriptCompile Remove="ClientApp\src\app\authentication\authentication.service.ts" />
     <TypeScriptCompile Remove="ClientApp\src\app\core\core.module.ts" />
     <TypeScriptCompile Remove="ClientApp\src\app\core\services\window-ref.service.ts" />
+    <TypeScriptCompile Remove="ClientApp\src\app\layout\contacttype\contacttype.service.ts" />
     <TypeScriptCompile Remove="ClientApp\src\app\layout\country\country.service.ts" />
     <TypeScriptCompile Remove="ClientApp\src\app\layout\logs-details\logs-details.service.ts" />
     <TypeScriptCompile Remove="ClientApp\src\app\layout\logs\schedulelog.service.ts" />
@@ -65,6 +68,7 @@
     <TypeScriptCompile Remove="ClientApp\src\app\layout\sourcedata\sourcedata.service.ts" />
     <TypeScriptCompile Remove="ClientApp\src\app\layout\statement-defination\statement.service.ts" />
     <TypeScriptCompile Remove="ClientApp\src\app\layout\statement-search\statementSearch.service.ts" />
+    <TypeScriptCompile Remove="ClientApp\src\app\layout\tenants\tenant.service.ts" />
     <TypeScriptCompile Remove="ClientApp\src\app\layout\users\user.service.spec.ts" />
     <TypeScriptCompile Remove="ClientApp\src\app\layout\users\user.service.ts" />
     <TypeScriptCompile Remove="ClientApp\src\app\login\login.service.ts" />
@@ -96,6 +100,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <TypeScriptCompile Update="ClientApp\src\app\layout\contacttype\contacttype.ts">
+      <SubType>Code</SubType>
+    </TypeScriptCompile>
     <TypeScriptCompile Update="ClientApp\src\app\layout\country\country.ts">
       <SubType>Code</SubType>
     </TypeScriptCompile>
