--- a/API/API.csproj
+++ b/API/API.csproj
@@ -311,7 +311,9 @@
     <None Include="Properties\PublishProfiles\nis-api - ReadOnly - FTP.pubxml" />
     <None Include="Properties\PublishProfiles\nis-api - Web Deploy.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\nisqa-api - FTP1.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - ReadOnly - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\nisqa-api - ReadOnly - FTP1.pubxml" />
     <None Include="Properties\PublishProfiles\nisqa-api - Web Deploy.pubxml" />
     <Content Include="Properties\webjobs-list.json" />
     <Content Include="Resources\fonts\fontawesome-webfont.eot" />
@@ -324,6 +326,7 @@
     <Content Include="Resources\sampledata\analyticschartdata.json" />
     <Content Include="Resources\sampledata\currenttransactiondetail.json" />
     <Content Include="Resources\sampledata\savingtransactiondetail.json" />
+    <None Include="Properties\PublishProfiles\nisqa-api - Web Deploy1.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
