--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -122,6 +122,7 @@
     <Compile Include="Search Parameter\SchdeuleSearchParameter.cs" />
     <Compile Include="Search Parameter\StateSearchParameter.cs" />
     <Compile Include="Search Parameter\TenantContactSearchParameter.cs" />
+    <Compile Include="Search Parameter\TenantUserSearchParameter.cs" />
     <Compile Include="Search Parameter\WidgetSearchParameter.cs" />
     <Compile Include="Search Parameter\RoleSearchParameter.cs" />
     <Compile Include="Search Parameter\UserSearchParameter.cs" />
@@ -133,6 +134,7 @@
     <Compile Include="StatementPageContent.cs" />
     <Compile Include="TenantConfiguration.cs" />
     <Compile Include="TenantContact.cs" />
+    <Compile Include="TenantUser.cs" />
     <Compile Include="User.cs" />
     <Compile Include="UserLogin.cs" />
     <Compile Include="UserLoginActivityHistory.cs" />
