--- a/API/API.csproj
+++ b/API/API.csproj
@@ -293,6 +293,7 @@
     <Compile Include="Controllers\AssetLibraryController.cs" />
     <Compile Include="Controllers\ScheduleController.cs" />
     <Compile Include="Controllers\TenantContactController.cs" />
+    <Compile Include="Controllers\TenantUserController.cs" />
     <Compile Include="Controllers\WidgetController.cs" />
     <Compile Include="Controllers\RoleController.cs" />
     <Compile Include="Controllers\UserController.cs" />
