--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScheduleManager.cs" />
     <Compile Include="TenantContactManager.cs" />
+    <Compile Include="TenantUserManager.cs" />
     <Compile Include="WidgetManager.cs" />
     <Compile Include="RoleManager.cs" />
     <Compile Include="UserManager.cs" />
