--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -67,6 +67,7 @@
     <Compile Include="ClientManager.cs" />
     <Compile Include="ContactTypeManager.cs" />
     <Compile Include="CountryManager.cs" />
+    <Compile Include="MultiTenantUserRoleAccessManager.cs" />
     <Compile Include="StateManager.cs" />
     <Compile Include="StatementSearchManager.cs" />
     <Compile Include="TenantConfigurationManager.cs" />
