--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Enum\SortOrder.cs" />
     <Compile Include="Common\SortParameter.cs" />
     <Compile Include="IncomeSources.cs" />
+    <Compile Include="MultiTenantUserRoleAccess.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="PageWidget.cs" />
     <Compile Include="PageWidgetVistorData.cs" />
@@ -114,6 +115,7 @@
     <Compile Include="Search Parameter\ClientSearchParameter.cs" />
     <Compile Include="Search Parameter\ContactTypeSearchParameter.cs" />
     <Compile Include="Search Parameter\CountrySearchParameter.cs" />
+    <Compile Include="Search Parameter\MultiTenantUserRoleAccessSearchParameter.cs" />
     <Compile Include="Search Parameter\RenderEngineSearchParameter.cs" />
     <Compile Include="Search Parameter\ScheduleLogSearchParameter.cs" />
     <Compile Include="Search Parameter\StatementSearchSearchParameter.cs" />
