Send activation link issue resolved

--- a/API/Web.config
+++ b/API/Web.config
@@ -10,10 +10,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    
+
     <!-- for Local Server -->
     <!--<add name="TenantManagerConnectionString" connectionString="Data Source=WSPL_LAP_008;Initial Catalog=nisProd;User ID=nis_admin;Password=Websym@123" />-->
-    
+
     <!-- for QA Server -->
     <add name="TenantManagerConnectionString" connectionString="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />
 
@@ -44,10 +44,10 @@
     <!--<add key="ChangePasswordLink" value="http://localhost:4200/confirmuser?token=" />-->
 
     <!--Teanant setup  -->
-    
+
     <!-- for Local Server -->
     <!--<add key="TenantSQLStorageAccount" value="Data Source=WSPL_LAP_008;Initial Catalog=nisProd;User ID=nis_admin;Password=Websym@123" />-->
-    
+
     <!-- for QA Server -->
     <add key="TenantSQLStorageAccount" value="Data Source=nis.database.windows.net;Initial Catalog=NIS;User ID=websym;Password=Admin@123" />
 
@@ -143,10 +143,10 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
 
-    <!--<staticContent>
+    <staticContent>
       <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
       <mimeMap fileExtension=".json" mimeType="application/json" />
-    </staticContent>-->
+    </staticContent>
 
     <security>
       <requestFiltering>
