--- a/API/API.csproj
+++ b/API/API.csproj
@@ -282,6 +282,7 @@
     <Compile Include="Controllers\AnalyticsDataController.cs" />
     <Compile Include="Controllers\ClientController.cs" />
     <Compile Include="Controllers\ContactTypeController.cs" />
+    <Compile Include="Controllers\DynamicWidgetController.cs" />
     <Compile Include="Controllers\CountryController.cs" />
     <Compile Include="Controllers\MultiTenantUserRoleAccessController.cs" />
     <Compile Include="Controllers\StatementSearchController.cs" />
