--- a/Exception/Exception.csproj
+++ b/Exception/Exception.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Constants\AssetLibrary.cs" />
     <Compile Include="Constants\CityConstant.cs" />
     <Compile Include="Constants\ClientConstant.cs" />
+    <Compile Include="Constants\DynamicWidgetConstant.cs" />
     <Compile Include="Constants\CountryConstant.cs" />
     <Compile Include="Constants\ExceptionConstant.cs" />
     <Compile Include="Constants\MultiTenantUserRoleAccessException.cs" />
@@ -85,6 +86,9 @@
     <Compile Include="ContactType\ContactTypeReferenceInTenantContactException.cs" />
     <Compile Include="ContactType\DuplicateContactTypeFoundException.cs" />
     <Compile Include="ContactType\InvalidContactTypeException.cs" />
+    <Compile Include="Dynamic Widget\DynamicWidgetNotFoundException.cs" />
+    <Compile Include="Dynamic Widget\DuplicateDynamicWidgetFoundException.cs" />
+    <Compile Include="Dynamic Widget\InvalidDynamicWidgetException.cs" />
     <Compile Include="Country\CountryReferenceInTenantContactException.cs" />
     <Compile Include="Country\CountryReferenceInTenantException.cs" />
     <Compile Include="Country\CountryReferenceInUserException.cs" />
@@ -138,6 +142,7 @@
     <Compile Include="User\AlreadyUsedPasswordException.cs" />
     <Compile Include="User\DeactivatedUserLoginException.cs" />
     <Compile Include="User\DuplicateUserEmailAddressFoundException.cs" />
+    <Compile Include="User\UserReferenceInTenantGroupException.cs" />
     <Compile Include="User\DuplicateUserFoundException.cs" />
     <Compile Include="User\DuplicateUserMobileNumberFoundException.cs" />
     <Compile Include="User\InvalidPasswordFormatException.cs" />
