--- a/Manager/Manager.csproj
+++ b/Manager/Manager.csproj
@@ -66,6 +66,7 @@
     <Compile Include="CityManager.cs" />
     <Compile Include="ClientManager.cs" />
     <Compile Include="ContactTypeManager.cs" />
+    <Compile Include="DynamicWidgetManager.cs" />
     <Compile Include="CountryManager.cs" />
     <Compile Include="MultiTenantUserRoleAccessManager.cs" />
     <Compile Include="StateManager.cs" />
