--- a/Model/Model.csproj
+++ b/Model/Model.csproj
@@ -79,6 +79,8 @@
     <Compile Include="Country.cs" />
     <Compile Include="CustomerInformation.cs" />
     <Compile Include="DashboardData.cs" />
+    <Compile Include="Entity.cs" />
+    <Compile Include="EntityFieldMap.cs" />
     <Compile Include="Enum\Activity.cs" />
     <Compile Include="Enum\BatchStatus.cs" />
     <Compile Include="Enum\ClaimType.cs" />
