api added for send password by mail to user.

--- a/API/Web.config
+++ b/API/Web.config
@@ -28,6 +28,8 @@
 
     <add key="UserForgotPasswordSubject" value="nIS - Reset password" />
     <add key="UserForgotPasswordMessage" value="Hello {0},&lt;br&gt;&lt;br&gt; Please click on below link to reset your account -&lt;br&gt;&lt;br&gt; {1}" />
+    
+    <add key="SendPasswordMailToUserMessage" value="Hello {0},&lt;br&gt;&lt;br&gt; Please use below new credentials to login nIS portal -&lt;br&gt;&lt;br&gt; {1} &lt;br&gt; {2}&lt;br&gt;&lt;br&gt;" />
 
     <add key="MailDisplayName" value="nIS Team" />
     <add key="FromEmailAddress" value="nis.n4mative@gmail.com" />
